realigned flags - correct alignment of li elements still in progress

--- a/src/styles.css
+++ b/src/styles.css
@@ -27,8 +27,7 @@ main {
 }
 
 #flag {
-    width: 50px;
-    display: inline-block;
+    width: 40px;
 }
 
 #africa {
